@@ -6,16 +6,23 @@ import java.util.List;
 
 public class RepositoryApp {
     public static void main(String[] args) {
-        System.out.println("Repository Pattern Demo");
+        System.out.println("Repository Pattern Demo (Lecture 7 Architecture)");
 
-        // 1. Instantiate Repository
-        IRepository<ProductEntity> repo = new ProductRepository();
+        // 1. Instantiate a concrete Repository implementation.
+        // In Step 04, we use MySqlRepository or H2Repository.
+        IRepository<ProductEntity> repo = new MySqlRepository();
 
         try {
+            // Demonstrate the new DataSource abstraction
+            System.out.println("Connected to: " + repo.getDataSourceType());
+
             // 2. Create Items
             System.out.println("\n--- Saving Items ---");
             repo.save(new BookEntity("Robert C. Martin", "Clean Code", 45.00, 10));
             repo.save(new TicketEntity("Java Conference", 299.99));
+
+            // Note: Constructor order must match the entity class:
+            // title, price, copies, orderQty, date, hasDisc
             repo.save(new DiscMagEntity("Retro Gamer", 15.00, 20, 100, new Date(), true));
 
             // 3. List All (Polymorphic)
@@ -27,7 +34,7 @@ public class RepositoryApp {
 
             // 4. Update
             if (!items.isEmpty()) {
-                ProductEntity first = items.getFirst();
+                ProductEntity first = items.get(0);
                 System.out.println("\n--- Updating Item ID: " + first.getId() + " ---");
 
                 if (first instanceof TicketEntity) {
@@ -36,22 +43,26 @@ public class RepositoryApp {
                     ((PublicationEntity) first).setPrice(999.99);
                 }
 
+                // The Repository figures out this is an UPDATE because ID is not null
                 repo.save(first);
                 System.out.println("Updated: " + repo.findById(first.getId()));
             }
 
-            // 5. Delete
+            // 5. Demonstrate the new count feature
+            System.out.println("\n--- Database Statistics ---");
+            System.out.println("Total items in inventory: " + repo.count());
+
+            // 6. Delete Demo
             if (items.size() > 1) {
                 Long idToDelete = items.get(1).getId();
                 System.out.println("\n--- Deleting Item ID: " + idToDelete + " ---");
                 repo.delete(idToDelete);
             }
 
-            // 6. List again
-            System.out.println("\n--- Remaining Items ---");
-            repo.findAll().forEach(System.out::println);
+            System.out.println("\nFinal count: " + repo.count());
 
         } finally {
+            // Critical: Always close the repository to release DB connections
             repo.close();
         }
     }
